# concstarback

./: README.md  pyproject.toml  seed_configs.py  set_quota.py  start.sh  test_checkin.py  test_db.py  test_query.py  test_scheduler.py  test_schema.py  test_supabase.py  test_vote.py  update_db.py  vercel.json
api/: index.py
app/: main.py
app/controllers/: configuration_controller.py  constancy_controller.py  question_controller.py  session_controller.py  user_controller.py
app/core/: config.py  exceptions.py  scheduler.py  security.py
app/db/: client.py
app/models/: configuration.py  constancy.py  online_user.py  question.py  session.py  user.py
app/routers/: auth_router.py  configuration_router.py  constancy_router.py  question_router.py  session_router.py  user_router.py
arquitetucture/planning/: backend.md  cancellations.ts  online_users.ts  questions.ts  sessions.ts  user.ts  votes.ts
arquitetucture/planning/backend/: 01-architecture-overview.md  02-database-schema.md  03-api-contracts.md  04-implementation-roadmap.md  05-best-practices-and-docs.md  06-configurations-schema.md
arquitetucture/planning/settings/: general.ts
