[project]
name = "concstar-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "luismaiasombra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "supabase (>=2.31.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.uv]
package = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
ruff = "^0.15.19"
black = "^26.5.1"
mypy = "^2.1.0"
httpx = "^0.28.1"
